--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "frontmatter-markdown-loader": "^1.6.0",
     "highlight.js": "^9.15.6",
     "node-sass": "^4.11.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "responsive-loader": "^1.2.0",
     "sass-loader": "^7.1.0",
     "sharp": "^0.22.0"
