--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "generate": "nuxt generate",
     "analyze": "nuxt build --analyze",
     "clean": "rm -rf dist",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist -b master",
     "bump": "npm version patch",
     "prod": "npm prune --production",
     "publish": "npm run bump && npm run generate && npm run deploy",
