--- a/package.json
+++ b/package.json
@@ -23,24 +23,27 @@
     "lint": "standard"
   },
   "dependencies": {
-    "@nuxtjs/style-resources": "^0.1.2",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "markdown-it": "^10.0.0",
+    "markdown-it-prism": "^2.0.3",
     "normalize.css": "^8.0.1",
-    "nuxt": "^2.7.1",
-    "nuxt-i18n": "^5.8.5",
-    "nuxt-webfontloader": "^1.0.0",
-    "vue-lazyload": "^1.2.6"
+    "nuxt": "^2.11.0",
+    "nuxt-i18n": "^6.4.1",
+    "nuxt-webfontloader": "^1.1.0",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
-    "frontmatter-markdown-loader": "^1.6.0",
     "gh-pages": "^2.1.1",
     "highlight.js": "^9.15.6",
-    "node-sass": "^4.11.0",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "responsive-loader": "^1.2.0",
-    "sass-loader": "^7.1.0",
-    "sharp": "^0.26.2",
     "standard": "^14.3.1",
-    "start-server-and-test": "^1.10.2"
+    "start-server-and-test": "^1.10.2",
+    "frontmatter-markdown-loader": "^3.1.0",
+    "node-sass": "^4.13.0",
+    "responsive-loader": "^1.2.0",
+    "sass-loader": "^8.0.0",
+    "sharp": "^0.23.4"
+
   }
 }
