--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "michael paulukonis <michael.paulukonis@gmail.com>",
   "private": true,
   "engines": {
-    "node": ">=10.0.0",
+    "node": "14.16.1",
     "npm": ">=5.0.0"
   },
   "dependencies": {
