--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "private": true,
+  "private": false,
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
