--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.5.2",
+    "@nuxt/fonts": "^0.11.0",
     "@nuxtjs/tailwindcss": "^6.13.2",
     "gh-pages": "^6.3.0",
     "nuxt": "^3.16.1",
