--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-node_modules
-*.log*
+# build and other artifacts
 .nuxt
 .nitro
 .cache
 .output
 .env
 dist
+.data/
 
 assets/.DS_Store
 
@@ -18,7 +18,7 @@ assets/img/projects/.DS_Store
 
 **/*.bak
 
-reference/
+./reference/
 notes/
 
 # SpecStory explanation file
@@ -31,8 +31,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 dev-debug.log
+
 # Dependency directories
 node_modules/
+
 # Environment variables
 # Editor directories and files
 .idea
@@ -42,6 +44,7 @@ node_modules/
 *.njsproj
 *.sln
 *.sw?
+
 # OS specific
 .DS_Store
 
