--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "postinstall": "nuxt prepare",
     "clean": "rm -rf dist && rm -rf .output",
     "deploy": "gh-pages -t -d .output/public --nojekyll",
@@ -18,18 +21,24 @@
     "@nuxt/content": "^3.8.2",
     "@vueuse/core": "^14.1.0",
     "better-sqlite3": "^12.5.0",
+    "minisearch": "^7.2.0",
     "nuxt": "^4.2.1",
     "zod": "^4.2.1"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
   "devDependencies": {
     "@nuxt/fonts": "^0.12.1",
+    "@nuxt/test-utils": "^3.21.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@vitest/coverage-v8": "^4.0.16",
     "@vue/language-plugin-pug": "^3.1.8",
+    "@vue/test-utils": "^2.4.6",
     "gh-pages": "^6.3.0",
+    "happy-dom": "^20.0.11",
     "pug": "^3.0.3",
     "remark-attr": "^0.11.1",
     "remark-directive": "^4.0.0",
-    "sass": "^1.97.0"
+    "sass": "^1.97.0",
+    "vitest": "^4.0.16"
   }
 }
